--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    "dev": "webpack serve --config ./bundler/webpack.dev.js",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -13,6 +14,7 @@
     "css-loader": "^5.0.1",
     "dat.gui": "^0.7.7",
     "file-loader": "^6.2.0",
+    "gh-pages": "^4.0.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.7",
     "mini-css-extract-plugin": "^1.3.4",
@@ -27,5 +29,4 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   }
-  
 }
