--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^5.0.1",
     "dat.gui": "^0.7.7",
     "file-loader": "^6.2.0",
+    "firebase": "^9.11.0",
     "gh-pages": "^4.0.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.7",
